# fast_zero_dunossauro

./: pyproject.toml
tests/: test_app.py
